--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
 # used by Traefik to transmit traffic and aqcuire TLS certificates
-DOMAIN=localhost
+DOMAIN=ec2-3-15-194-42.us-east-2.compute.amazonaws.com
 # To test the local Traefik config
 # DOMAIN=localhost.tiangolo.com
 
@@ -11,7 +11,7 @@ FRONTEND_HOST=http://localhost:5173
 # FRONTEND_HOST=https://dashboard.example.com
 
 # Environment: local, staging, production
-ENVIRONMENT=local
+ENVIRONMENT=staging
 
 PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
