--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
 # used by Traefik to transmit traffic and aqcuire TLS certificates
-DOMAIN=ec2-3-15-194-42.us-east-2.compute.amazonaws.com
+DOMAIN=localhost
 # To test the local Traefik config
 # DOMAIN=localhost.tiangolo.com
 
