--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DOMAIN=ec2-3-15-194-42.us-east-2.compute.amazonaws.com
 # Used by the backend to generate links in emails to the frontend
 # FRONTEND_HOST=http://localhost:5173
 # In staging and production, set this env var to the frontend host, e.g.
-FRONTEND_HOST=https://dashboard.example.com
+FRONTEND_HOST=http://ec2-3-15-194-42.us-east-2.compute.amazonaws.com
 
 # Environment: local, staging, production
 ENVIRONMENT=staging
